# FACUL-estruturaDeDados1

./: CMakeLists.txt  README.md
pratica-Pilha/: main.c  tad_fila.c  tad_fila.h  tad_lista.c  tad_lista.h  tad_pilha.c  tad_pilha.h
pratica-heap-sort/: heap.c  heap.h  main.c
pratica-insertion-mergesort/: listaAluno.c  listaAluno.h  main.c
trabalhoPratico2/: main.c  trabalho2.c  trabalho2.h
