cmake_minimum_required(VERSION 3.17)
project(FACUL-estruturaDeDados1 C)

set(CMAKE_C_STANDARD 99)

add_executable(pratica-Pilha pratica-Pilha/main.c pratica-Pilha/tad_pilha.h pratica-Pilha/tad_lista.h pratica-Pilha/tad_lista.c pratica-Pilha/tad_pilha.c pratica-Pilha/tad_fila.h pratica-Pilha/tad_fila.c)